--- a/en-US/Lang_NPC_EN-US.lang
+++ b/en-US/Lang_NPC_EN-US.lang
@@ -1,3 +1,5 @@
+# Cham
+Amlos.Character.Cham.name: Cham
 Amlos.Character.Cham.Daily.0.msg: While many human and Pomttacine call me a Sahamusi, I am not.
 Amlos.Character.Cham.Daily.1.msg: You are neither that red dragon nor that pink dragon, a newcomer?
 Amlos.Character.Cham.Daily.2.msg: I already gave you at least a 50% discount.
