--- a/zh-CN/Lang_NPC_ZH-CN.lang
+++ b/zh-CN/Lang_NPC_ZH-CN.lang
@@ -1,3 +1,5 @@
+# Cham
+Amlos.Character.Cham.name: 钱姆
 Amlos.Character.Cham.Daily.0.msg: 很多人类和彭大鹦总是叫我萨哈姆蜥，但我不是……
 Amlos.Character.Cham.Daily.1.msg: 你不是那只红龙，也不是那只粉龙。新来的?
 Amlos.Character.Cham.Daily.2.msg: 我已经给你至少五折优惠了。
