--- a/en-US/Lang_NPC_EN-US.lang
+++ b/en-US/Lang_NPC_EN-US.lang
@@ -1,4 +1,5 @@
-# Cham
+#File storing basic Character localization (not the story)
+#Cham
 Amlos.Character.Cham.name: Cham
 Amlos.Character.Cham.Daily.0.msg: While many human and Pomttacine call me a Sahamusi, I am not.
 Amlos.Character.Cham.Daily.1.msg: You are neither that red dragon nor that pink dragon, a newcomer?
