--- a/zh-CN/Lang_Combat_ZH-CN.lang
+++ b/zh-CN/Lang_Combat_ZH-CN.lang
@@ -1,3 +1,4 @@
+#relate to combat, like active/passive skills, effect, etc.
 Amlos.Combat.ActiveSkill.AbsoluteZero.desc: "召唤一个领域，在其中的敌人收到持续伤害，呆得越久伤害越高。"
 Amlos.Combat.ActiveSkill.AbsoluteZero.name: "绝对零度"
 Amlos.Combat.ActiveSkill.AbyssalDevour.desc: "召唤深渊巨口，对最近目标发起吞噬，造成 {attack}。\n对该目标额外叠加{baseIncrement}+{levelBonus}*{level}层沉渊效果。"
@@ -204,6 +205,8 @@ Amlos.Combat.PassiveSkill.BurningBlood.desc: "BurningBloodDesc."
 Amlos.Combat.PassiveSkill.BurningBlood.name: "BurningBlood"
 Amlos.Combat.PassiveSkill.EarthProtection.desc: "EarthProtectionDesc."
 Amlos.Combat.PassiveSkill.EarthProtection.name: "EarthProtection"
+Amlos.Combat.PassiveSkill.EnergyConfluence.desc: "EnergyConfluenceDesc."
+Amlos.Combat.PassiveSkill.EnergyConfluence.name: "EnergyConfluence"
 Amlos.Combat.PassiveSkill.FireTouch.desc: "FireTouchDesc."
 Amlos.Combat.PassiveSkill.FireTouch.name: "FireTouch"
 Amlos.Combat.PassiveSkill.GaleCombo.desc: "GaleComboDesc."
@@ -212,6 +215,8 @@ Amlos.Combat.PassiveSkill.GazeFromAbyss.desc: "GazeFromAbyssDesc."
 Amlos.Combat.PassiveSkill.GazeFromAbyss.name: "GazeFromAbyss"
 Amlos.Combat.PassiveSkill.KarisArmor.desc: "KarisArmorDesc."
 Amlos.Combat.PassiveSkill.KarisArmor.name: "KarisArmor"
+Amlos.Combat.PassiveSkill.LightShield.desc: "LightShieldDesc."
+Amlos.Combat.PassiveSkill.LightShield.name: "LightShield"
 Amlos.Combat.PassiveSkill.None.desc: "无"
 Amlos.Combat.PassiveSkill.None.name: "无"
 Amlos.Combat.PassiveSkill.SolarBless.desc: "SolarBlessDesc."
