--- a/zh-CN/Lang_Entity_ZH-CN.lang
+++ b/zh-CN/Lang_Entity_ZH-CN.lang
@@ -1,3 +1,4 @@
+#localization for common entities (not the NPCs)
 Amlos.Entity.BookWorm.desc: "BookWormDesc."
 Amlos.Entity.BookWorm.info: "BookWormInfo."
 Amlos.Entity.BookWorm.name: "书虫"
@@ -46,6 +47,9 @@ Amlos.Entity.Rhombear.name: "棱熊"
 Amlos.Entity.Sahamusi_SpearSoldier.desc: "Sahamusi_SpearSoldierDesc."
 Amlos.Entity.Sahamusi_SpearSoldier.info: "Sahamusi_SpearSoldierInfo."
 Amlos.Entity.Sahamusi_SpearSoldier.name: "Sahamusi_SpearSoldier"
+Amlos.Entity.StoneEye.desc: "StoneEyeDesc."
+Amlos.Entity.StoneEye.info: "StoneEyeInfo."
+Amlos.Entity.StoneEye.name: "StoneEye"
 Amlos.Entity.TeenageRhombear.desc: "TeenageRhombearDesc."
 Amlos.Entity.TeenageRhombear.info: "TeenageRhombearInfo."
 Amlos.Entity.TeenageRhombear.name: "TeenageRhombear"
