--- a/zh-CN/Lang_Common_ZH-CN.lang
+++ b/zh-CN/Lang_Common_ZH-CN.lang
@@ -1,4 +1,7 @@
 #Common entries
+# Regions
+Amlos.Region.EN_US.name: "English (United States)"
+Amlos.Region.ZH_CN.name: "简体中文"
 #Elements
 Amlos.Element.Aethiumian.name: "§#E1AEA1辉石§"
 Amlos.Element.Arcane.name: "§#8600FF奥术元素§"
@@ -10,6 +13,23 @@ Amlos.Element.Soul.name: "§#7F7F7F灵魂元素§"
 Amlos.Element.Space.name: "§#FF7FFF空间元素§"
 Amlos.Element.Water.name: "§B水元素§"
 Amlos.Element.Wind.name: "§G风元素§"
+# Keybinds
+Amlos.Control.Input.Key.MoveLeft.name: 左移动
+Amlos.Control.Input.Key.MoveRight.name: 右移动
+Amlos.Control.Input.Key.MoveUp.name: 上移动
+Amlos.Control.Input.Key.MoveDown.name: 下移动
+Amlos.Control.Input.Key.Jump.name: 跳跃
+Amlos.Control.Input.Key.Sprint.name: 冲刺
+Amlos.Control.Input.Key.MeleeAttack.name: 近战
+Amlos.Control.Input.Key.Defend.name: 防御
+Amlos.Control.Input.Key.Skill1.name: 技能 1
+Amlos.Control.Input.Key.Skill2.name: 技能 2
+Amlos.Control.Input.Key.SkillSwitch.name: 切换书
+Amlos.Control.Input.Key.Interact.name: 交互
+Amlos.Control.Input.Key.Map.name: 地图
+Amlos.Control.Input.Key.Bag.name: 背包
+Amlos.Control.Input.Key.ESC.name: 退出
+Amlos.Control.Input.Key.Debug.name: 调试
 #Combat
 Amlos.Combat.AttackDuration.info: "生效/冷却: §G{activation}s§/§R{cooldown}s§"
 Amlos.Combat.Damage.info: "{list}{element}伤害"
