--- a/en-US/Lang_UI_EN-US.lang
+++ b/en-US/Lang_UI_EN-US.lang
@@ -1,13 +1,26 @@
+#Common
 Amlos.UI.Common.Back.name: "Back"
+Amlos.UI.Common.Cancel.name: "Cancel"
 Amlos.UI.Common.Confirm.name: "Confirm"
+Amlos.UI.Common.Reset.name: "Reset"
 Amlos.UI.Common.Off.name: "Off"
 Amlos.UI.Common.On.name: "On"
+#Main Menu
+Amlos.UI.MainMenu.Continue.name: Continue
+Amlos.UI.MainMenu.NewGame.name: New Game
+Amlos.UI.MainMenu.Settings.name: Settings
+Amlos.UI.MainMenu.Quit.name: Quit
+#Pause Panel
 Amlos.UI.PausePanel.Resume.name: "Resume"
 Amlos.UI.PausePanel.Restart.name: "Restart"
+Amlos.UI.PausePanel.Restart.msg: "Restart the level?\nYour current progress will NOT be saved"
 Amlos.UI.PausePanel.Quit.name: "Quit"
+Amlos.UI.PausePanel.Quit.msg: "Back to the main menu?\nYour current progress will be saved"
 Amlos.UI.PausePanel.Settings.name: "Settings"
 Amlos.UI.PausePanel.title: "Pause"
+#Settings
 Amlos.UI.Setting.Control.title: "Control"
+Amlos.UI.Setting.Control.ResetKeybind.name: "Reset keybinds"
 Amlos.UI.Setting.Credit.title: "Credits"
 Amlos.UI.Setting.Graphics.title: "Graphic"
 Amlos.UI.Setting.Graphics.UIScale.name: "UI Scale"
@@ -21,6 +34,7 @@ Amlos.UI.Setting.Graphics.Light.BrightnessChange.name: "Brightness Change"
 Amlos.UI.Setting.Graphics.Light.ColorChange.name: "Color Change"
 Amlos.UI.Setting.Language.title: "Language"
 Amlos.UI.Setting.title: "Settings"
+Amlos.UI.Setting.Reset.msg: "Do you want to reset all settings?"
 Amlos.UI.Setting.Other.title: "Other"
 Amlos.UI.Setting.Other.Reset.name: "Reset Settings"
 Amlos.UI.Setting.Other.OpenSaveFolder.name: "Open Save Folder"
