--- a/en-US/Lang_Common_EN-US.lang
+++ b/en-US/Lang_Common_EN-US.lang
@@ -3,7 +3,7 @@
 Amlos.Region.EN_US.name: "English (United States)"
 Amlos.Region.ZH_CN.name: "简体中文"
 #Elements
-Amlos.Element.Aethiumian.name: "§#E1AEA1Aethiumian§"
+Amlos.Element.Aethion.name: "§#E1AEA1Aethion§"
 Amlos.Element.Arcane.name: "§#8600FFArcane§"
 Amlos.Element.Dark.name: "§#231756Dark§"
 Amlos.Element.Earth.name: "§#A44000Earth§"
@@ -13,6 +13,11 @@ Amlos.Element.Soul.name: "§#7F7F7FSoul§"
 Amlos.Element.Space.name: "§#FF7FFFSpace§"
 Amlos.Element.Water.name: "§BWater§"
 Amlos.Element.Wind.name: "§GWind§"
+# Rarity
+Amlos.Rarity.Common.name: Common
+Amlos.Rarity.Rare.name: Rare
+Amlos.Rarity.Epic.name: Epic
+Amlos.Rarity.Legendary.name: Legendary
 #Keybinds
 Amlos.Control.Input.Key.MoveLeft.name: Move Left
 Amlos.Control.Input.Key.MoveRight.name: Move Right
@@ -49,5 +54,15 @@ Amlos.Combat.Suffocation.name: Suffocate
 Amlos.Combat.Suffocation.desc: Soffocating, taking {DAMAGE} of true damage every {DAMAGE_DEAL_INTERVAL}s
 Amlos.Combat.Level.desc: "Level: {level}"
 Amlos.Combat.SkillDuration.info: "Activate/CD: §G{activation:f_f1}s§/§R{cooldown:f_f1}s§"
+Amlos.Combat.BookPage.BrokenPage.name: "Broken Page"
+Amlos.Combat.BookPage.name: "{handPrefix} Page of {Skill}"
+Amlos.Combat.BookPage.Hand.First.name: First
+Amlos.Combat.BookPage.Hand.Second.name: Second
+Amlos.Combat.BookPage.Hand.Last.name: Last
+Amlos.Combat.BookPage.Unidentified.name: "Unidentified {prefix} Book Page"
+Amlos.Combat.BookPage.Hand.Passive.name: Passive
+Amlos.Combat.BookPage.Hand.Active.name: Active
+Amlos.Combat.BookPage.Hand.FirstActive.name: Major Skill
+Amlos.Combat.BookPage.Hand.SecondActive.name: Secondary Skill
 #Objectives
 Amlos.Objectives.ConversationWith.info: "Conversation With {uniqueNPCName}"
