New Crowdin updates (#15)
* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_magicbooknames.yml (Chinese Simplified)

* New translations lang_magicbooknames.yml (English, United States)

* New translations lang_randomnames_npc.yml (Chinese Simplified)

* New translations lang_randomnames_npc.yml (English, United States)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (English, United States)

* New translations lang_entity.yml (Chinese Simplified)

* New translations lang_entity.yml (English, United States)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

* New translations lang_npc.yml (Chinese Simplified)

* New translations lang_npc.yml (English, United States)

* New translations lang_items.yml (Chinese Simplified)

* New translations lang_items.yml (English, United States)

* New translations lang_deathmessage.yml (Chinese Simplified)

* New translations lang_deathmessage.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_magicbooknames.yml (Chinese Simplified)

* New translations lang_magicbooknames.yml (English, United States)

* New translations lang_randomnames_npc.yml (English, United States)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (English, United States)

* New translations lang_entity.yml (Chinese Simplified)

* New translations lang_entity.yml (English, United States)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (En

--- a/en-US/Lang_Entity_EN-US.lang
+++ b/en-US/Lang_Entity_EN-US.lang
@@ -1,73 +1,18 @@
-#localization for common entities (not the NPCs)
-Amlos.Entity.BookWorm.desc: "BookWormDesc."
-Amlos.Entity.BookWorm.info: "BookWormInfo."
-Amlos.Entity.BookWorm.name: "BookWorm"
-Amlos.Entity.Dustevil.desc: "DustevilDesc."
-Amlos.Entity.Dustevil.info: "DustevilInfo."
-Amlos.Entity.Dustevil.name: "Dustevil"
-Amlos.Entity.Hemisphrog.desc: "HemisphrogDesc."
-Amlos.Entity.Hemisphrog.info: "HemisphrogInfo."
-Amlos.Entity.Hemisphrog.name: "Hemisphrog"
-Amlos.Entity.Laveel.desc: "LaveelDesc."
-Amlos.Entity.Laveel.info: "LaveelInfo."
-Amlos.Entity.Laveel.name: "Laveel"
-Amlos.Entity.Lightball.desc: "LightballDesc."
-Amlos.Entity.Lightball.info: "LightballInfo."
-Amlos.Entity.Lightball.name: "Lightball"
-Amlos.Entity.MamaRhombear.desc: "MamaRhombearDesc."
-Amlos.Entity.MamaRhombear.info: "MamaRhombearInfo."
-Amlos.Entity.MamaRhombear.name: "Mama Rhombear"
-Amlos.Entity.MamasRhombear.desc: "MamasRhombearDesc."
-Amlos.Entity.MamasRhombear.info: "MamasRhombearInfo."
-Amlos.Entity.MamasRhombear.name: "MamasRhombear"
-Amlos.Entity.PatrolTest.desc: "PatrolTestDesc."
-Amlos.Entity.PatrolTest.info: "PatrolTestInfo."
-Amlos.Entity.PatrolTest.name: "PatrolTest"
-Amlos.Entity.Pulengs_Dark.desc: "Pulengs_DarkDesc."
-Amlos.Entity.Pulengs_Dark.info: "Pulengs_DarkInfo."
-Amlos.Entity.Pulengs_Dark.name: "Pulengs_Dark"
-Amlos.Entity.Pulengs_Earth.desc: "Pulengs_EarthDesc."
-Amlos.Entity.Pulengs_Earth.info: "Pulengs_EarthInfo."
-Amlos.Entity.Pulengs_Earth.name: "Pulengs_Earth"
-Amlos.Entity.Pulengs_Fire.desc: "Pulengs_FireDesc."
-Amlos.Entity.Pulengs_Fire.info: "Pulengs_FireInfo."
-Amlos.Entity.Pulengs_Fire.name: "Pulengs_Fire"
-Amlos.Entity.Pulengs_Physical.desc: "Pulengs_PhysicalDesc."
-Amlos.Entity.Pulengs_Physical.info: "Pulengs_PhysicalInfo."
-Amlos.Entity.Pulengs_Physical.name: "Pulengs_Physical"
-Amlos.Entity.Pulengs_Water.desc: "Pulengs_WaterDesc."
-Amlos.Entity.Pulengs_Water.info: "Pulengs_WaterInfo."
-Amlos.Entity.Pulengs_Water.name: "Pulengs_Water"
-Amlos.Entity.Pulengs_Wind.desc: "Pulengs_WindDesc."
-Amlos.Entity.Pulengs_Wind.info: "Pulengs_WindInfo."
-Amlos.Entity.Pulengs_Wind.name: "Pulengs_Wind"
-Amlos.Entity.Rhombear.desc: "RhombearDesc."
-Amlos.Entity.Rhombear.info: "RhombearInfo."
-Amlos.Entity.Rhombear.name: "Rhombear"
-Amlos.Entity.Sahamusi_SpearSoldier.desc: "Sahamusi_SpearSoldierDesc."
-Amlos.Entity.Sahamusi_SpearSoldier.info: "Sahamusi_SpearSoldierInfo."
-Amlos.Entity.Sahamusi_SpearSoldier.name: "Sahamusi_SpearSoldier"
-Amlos.Entity.StoneEye.desc: "StoneEyeDesc."
-Amlos.Entity.StoneEye.info: "StoneEyeInfo."
-Amlos.Entity.StoneEye.name: "StoneEye"
-Amlos.Entity.TeenageRhombear.desc: "TeenageRhombearDesc."
-Amlos.Entity.TeenageRhombear.info: "TeenageRhombearInfo."
-Amlos.Entity.TeenageRhombear.name: "TeenageRhombear"
-Amlos.Entity.TestingEnemy.desc: "TestingEnemyDesc."
-Amlos.Entity.TestingEnemy.info: "TestingEnemyInfo."
-Amlos.Entity.TestingEnemy.name: "TestingEnemy"
-Amlos.Entity.TheAmir.desc: "TheAmirDesc."
-Amlos.Entity.TheAmir.info: "TheAmirInfo."
-Amlos.Entity.TheAmir.name: "The Amir"
-Amlos.Entity.TheAmir_MajorClaw.desc: "TheAmir_MajorClawDesc."
-Amlos.Entity.TheAmir_MajorClaw.info: "TheAmir_MajorClawInfo."
-Amlos.Entity.TheAmir_MajorClaw.name: "TheAmir_MajorClaw"
-Amlos.Entity.TheAmir_PatternClaw.desc: "TheAmir_PatternClawDesc."
-Amlos.Entity.TheAmir_PatternClaw.info: "TheAmir_PatternClawInfo."
-Amlos.Entity.TheAmir_PatternClaw.name: "TheAmir_PatternClaw"
-Amlos.Entity.TheGuardian.desc: "TheGuardianDesc."
-Amlos.Entity.TheGuardian.info: "TheGuardianInfo."
-Amlos.Entity.TheGuardian.name: "The Guardian"
-Amlos.Entity.Walk_Test.desc: "Walk_TestDesc."
-Amlos.Entity.Walk_Test.info: "Walk_TestInfo."
-Amlos.Entity.Walk_Test.name: "Walk_Test"
+Amlos:
+  Entity:
+    BookWorm:
+      name: "Book Worm"
+    Dustevil:
+      name: "Dustevil"
+    Hemisphrog:
+      name: "Hemisphrog"
+    Laveel:
+      name: "Laveel"
+    Lightball:
+      name: "Lightball"
+    Rhombear:
+      name: "Rhombear"
+    TheAmir:
+      name: "The Amir"
+    TheGuardian:
+      name: "The Guardian"
